--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="./css/styles.css"/>
     
-    <title>Musik</title>
+    <title>Musify</title>
   </head>
   <body>
     
